[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-cors==5.0.0",
    "flask>=3.1.1",
    "openai>=1.86.0",
    "python-dotenv==1.0.1",
    "weasyprint>=65.1",
    "pdfkit==1.0.0",
    "wkhtmltopdf==0.2",
]
